add delete portion

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Semester_6">
-        <activity android:name=".myCart"></activity>
+        <activity android:name=".itemDetails_cart"></activity>
+        <activity android:name=".myCart" />
         <activity android:name=".ui.home.itemDetails" />
         <activity android:name=".button_login" />
         <activity android:name=".registrationpage" />
