--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Semester_6">
-        <activity android:name=".itemdetails_mysold"></activity>
+        <activity android:name=".loginactivity"></activity>
+        <activity android:name=".itemdetails_mysold" />
         <activity android:name=".itemDetails_cart" />
         <activity android:name=".myCart" />
         <activity android:name=".ui.home.itemDetails" />
